--- a/readMe
+++ b/readMe
@@ -5,3 +5,5 @@ be extracted to AWS S3 everyday,
 uploading would trigger Lambda to 
 
 read the added file and print it to cloudwatch log
+
+![](images/Figure1.png)
